# SpatialPartitioning

./: .gitignore  .travis.yaml  Benchmark.hpp  BucketKNN.hpp  CMakeLists.txt  Generators.hpp  Homework4.ipynb  KDTree.hpp  Naive.hpp  Point.hpp  QuadTree.hpp  Spinner.hpp  Stopwatch.hpp  UnitTests.cpp  VPTree.hpp  homework4.md  main.cpp  notesOnImplementation.md
.ipynb_checkpoints/: Homework4-checkpoint.ipynb
PythonTrees/: naiveKNN.py  points_test.py
